[project]
description     = "Add your description here"
name            = "autohwp"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.1.0"

dependencies = [
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pyhwpx==0.50.32",
    "pyjosa>=1.0.3",
]

[dependency-groups]
dev = [ "notebook>=7.4.0", "ruff>=0.11.5" ]
ui  = [ "nicegui>=2.14.1" ]

[tool.ruff]
ignore      = [ "F401" ] # 사용하지 않은 import 제거 방지
line-length = 100
