[project]
description     = "A project for automating HWP document manipulation"
name            = "autohwp"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.1.0"

dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pathvalidate>=3.2.3",
    "pydantic>=2.11.3",
    "pyjosa>=1.0.3",
]

[dependency-groups]
dev = [ "notebook>=7.4.0", "ruff>=0.11.5" ]
hwp = [ "pyhwpx==0.50.32" ]
ui  = [ "streamlit>=1.44.1" ]

[tool.uv.sources]
autohwp = { workspace = true }

[tool.ruff]
ignore      = [ "F401" ] # 사용하지 않은 import 제거 방지
line-length = 100
